chore: add audit artifacts and https test outputs